src/App.css
/* CSS variables */
:root {
  --dark-blue: hsl(240, 38%, 20%);
  --gray-blue: hsl(240, 18%, 77%);
  --font-size: 2rem;
  --ff: 'Inter';
  --fw-300: 300;
  --fw-500: 500;
  --fw-700: 700;
}

/* TODO: 
     figure out storing font locally
     test position to slider controls for different sizes
     fix desktop at 1000px 
*/

main {
  font-family: var(--ff);
  font-size: 1.2rem;
  font-weight: var(--fw-300);
  color: var(--dark-blue);
  margin-block: 2rem;
  margin-inline: 1rem;
}

header {
  display: flex;
  flex-direction: column;
  background-image: url('../images/pattern-bg.svg');
  background-repeat: no-repeat;
  background-size: contain;
  padding-block: 2rem;
  padding-inline: 2.5rem;
}

.profile {
  filter: drop-shadow(0.6rem 1.1rem 0.9rem);
}

.visually-hidden {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.slider {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 1.5rem;
  background-color: white;
  border-radius: 1rem;
  max-width: 5rem;
  padding-block: 0.6rem;
  padding-inline: 2rem;
  position: relative;
  top: -1.3rem;
  left: 6rem;
}

article {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-image: url('../images/pattern-quotes.svg');
  background-repeat: no-repeat;
  background-position: top;
  background-size: 25%;
  margin-block: 2rem;
  padding-block: 1rem;
  margin-inline: 1.5rem;
}

article > p {
  margin-block: 1rem;
}

.profile_div {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.profile_p {
  margin-bottom: 1.5rem;
}

.name {
  font-weight: var(--fw-700);
  color: var(--dark-blue);
}

.title {
  padding-top: 0;
  margin-top: 0;
  color: var(--gray-blue);
}

/* Try moving background img to main and position bottom */
footer {
  background-image: url('images/pattern-curve.svg');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: bottom center;
  min-height: 9rem; 
}

@media(min-width: 40rem) {

  main {
    margin: 0;
  }

  header {
    display: inline-block;
    position: absolute;
    right: 5rem;
    top: 7rem;
    z-index: 0;
  }

  .slider {
    min-width: 7rem;
    padding-block: 1.3rem;
    border-radius: 2rem;
    gap: 2.5rem;
    top: -2rem;
    left: 4rem;
  }

  article {
    position: absolute;
    top: 13rem;
    left: 8rem;
    max-width: 47%;
    font-size: 2rem;
    z-index: 1;
    background-position: 6rem -1rem;
    padding-top: 5rem;
  }

  .name {
    position: absolute;
    top: 22rem;
    left: 0;
    font-size: 1.3rem;
  }

  .title {
    position: absolute;
    top: 22rem;
    left: 10rem;
    font-size: 1.3rem;
  }

  footer {
    position: absolute;
    background-position: top left;
    background-size: 50%;
    bottom: 0;
    left: -1rem;
    min-width: 100%;
  }
  
}

